# ADE-agentic-coding-environment

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/ade-app/: Cargo.toml  build.rs
crates/ade-app/assets/: LICENSE-Geist.txt
crates/ade-app/src/: main.rs
crates/ade-cli/: Cargo.toml
crates/ade-cli/src/: main.rs
crates/ade-core/: Cargo.toml
crates/ade-core/src/: ids.rs  layout.rs  lib.rs  workspace.rs
crates/ade-daemon/: Cargo.toml
crates/ade-daemon/src/: lib.rs  windows.rs
crates/ade-protocol/: Cargo.toml
crates/ade-protocol/src/: lib.rs
crates/ade-pty/: Cargo.toml
crates/ade-pty/src/: lib.rs  windows.rs
crates/ade-storage/: Cargo.toml
crates/ade-storage/src/: lib.rs
docs/: architecture.md  features.md  releasing.md
packaging/: AppxManifest.xml  build-msix.ps1  build-portable.ps1
