[workspace]
members = [
    "crates/ade-app",
    "crates/ade-cli",
    "crates/ade-core",
    "crates/ade-daemon",
    "crates/ade-protocol",
    "crates/ade-pty",
    "crates/ade-storage",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ade-core = { path = "crates/ade-core" }
ade-daemon = { path = "crates/ade-daemon" }
ade-protocol = { path = "crates/ade-protocol" }
ade-pty = { path = "crates/ade-pty" }
ade-storage = { path = "crates/ade-storage" }
arboard = "3.6.1"
crossbeam-channel = "0.5.16"
eframe = { version = "0.35.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "persistence",
    "wgpu",
] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rfd = "0.17.2"
thiserror = "2.0.19"
uuid = { version = "1.24.0", features = ["serde", "v4"] }
url = "2.5.8"
vt100 = "0.16.2"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
