[package]
name = "ade-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ade-core.workspace = true
ade-daemon.workspace = true
ade-protocol.workspace = true
arboard.workspace = true
base64.workspace = true
crossbeam-channel.workspace = true
eframe.workspace = true
egui_extras = { version = "0.35.0", features = ["svg"] }
image.workspace = true
rfd.workspace = true
self_update = { version = "0.44.0", default-features = false, features = ["ureq", "rustls"] }
serde_json.workspace = true
vt100.workspace = true
windows.workspace = true

[build-dependencies]
ico = "0.5.0"
image.workspace = true
winresource = "0.1.31"

[package.metadata.winresource]
CompanyName = "GitNimay"
FileDescription = "Termy agentic coding terminal"
InternalName = "termy"
OriginalFilename = "termy.exe"
ProductName = "Termy"

[lints]
workspace = true
