[package]
name = "ade-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ade-protocol.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
ade-core.workspace = true

[lints]
workspace = true
